# cs229_ml_submission

./: README.md  pyproject.toml
models/mar13_1xsim/: baselines_pooled_gbm_baseline.pkl  baselines_pooled_gbm_extended.pkl  baselines_pooled_ridge_baseline.pkl  baselines_pooled_ridge_extended.pkl  lstm_pooled.pt  lstm_pooled_features.txt  results.json  split_augmented.json  tuned_params.md
models/mar13_nosim/: baselines_dataset_gbm_baseline.pkl  baselines_dataset_gbm_extended.pkl  baselines_dataset_ridge_baseline.pkl  baselines_dataset_ridge_extended.pkl  baselines_pooled_gbm_baseline.pkl  baselines_pooled_gbm_extended.pkl  baselines_pooled_ridge_baseline.pkl  baselines_pooled_ridge_extended.pkl  lstm_dataset.pt  lstm_dataset_features.txt  lstm_pooled.pt  results.json  tuned_params.md
scripts/: __init__.py  make_additional_plots.py  make_pooled_split.py  run_all_models.py  simulate_subjects.py  train_lstm.py
splits/: pooled_80_20.json
src/: __init__.py  lstm_model.py  preprocess.py  split.py
