[project]
name = "cs299-fatigue-modeling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.4.0",
    "matplotlib>=3.10.8",
    "numpy>=1.26,<2",
    "pandas>=2.0,<3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.0",
    "torch<=2.2.2",
    "torchaudio<=2.2.2",
    "torchvision<=0.17.2",
]
